--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity
             android:name=".MapLayerActivity"
             android:label="@string/title_activity_map_layer"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Dialog"></activity>
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
